fixed issue where horiseon project image was not loading and added spacing at bottom of page for formatting

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -158,7 +158,10 @@ footer img {
     border-radius: 50%;
     display: block;
     margin: 0 auto;
+}
 
+footer {
+    margin-bottom: 16px;
 }
 
 /* Media queries for responsive design */
